--- a/module-3/01-CSS-Selectors/student-exercise/style.css
+++ b/module-3/01-CSS-Selectors/student-exercise/style.css
@@ -13,5 +13,106 @@
     box-sizing: border-box;
     font-family: Tahoma, Verdana, Segoe, sans-serif;
   }
-  
-  
+  header img {
+    height: 150px;
+    margin-left: 200px;
+  }
+  .subheading {
+    Color : rgba(0, 0, 0, 0.6);
+  }
+  body {
+    background-color: rgba(192, 192, 192, 0.1);
+  }
+  aside {
+    width: 200px; 
+    height: 100%;
+    position: fixed;
+    margin-left: 15px;  
+    border-right-style: solid;
+    border-color: rgba(0, 173, 238, 0.4);  
+  }
+  aside img {
+    height: 150px;
+    width: 150px;
+    margin-left: 38px;
+    
+  }
+  nav li {
+    border-bottom-style: solid;
+    border-color: rgba(0, 173, 238, 0.4);
+  }
+  aside ul {
+    display: block;
+    line-height: 3.0;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 15px;
+    padding: 8px 8px 8px 32px;
+    list-style: none;
+  }
+  aside a {
+    color: #00adee;
+    text-decoration: none;
+  }
+  main img {
+    max-width: 100%;
+  }
+  main {
+    padding-left: 20px;
+    margin-left: 200px;
+    display: inline-block;
+  }
+  section {
+    display: block;
+    width: 100%;
+    margin-left: 200;
+  }
+  section div {
+    float: left;
+    width: 30%;
+  }
+  section h2 {
+    color: #8CC36F;
+    display: inline-block;
+    text-align: center;
+  }
+  section p {
+    display: inline-block;
+    padding: 0px;
+    margin: 10px;
+    font-size: 14px;
+    height: 100%;
+    width: 85%;
+    text-align: left;
+  }
+  h2 {
+    font-size: 20px;
+    padding: 20px;
+  }
+  #what-we-do {
+    border-width: 2px;
+    border-color: rgba(170, 239, 135, 0.8);
+    border-right-style: solid;
+  }
+  #our-work {
+    border-right-style: solid;
+    border-color: rgba(170, 239, 135, 0.8);
+    border-width: 2px;
+  }
+  #social {
+    width: 100%;
+    display: inline-block;
+  }
+  footer {
+    display: inline-block;
+    font-size: 15px;
+    bottom: 0;
+    width: 100%;
+  }
+  main footer img {
+    height: 10px;
+    width: 10px;
+  }
+
+
+
