--- a/module-3/02-CSS-Layouts/student-exercise/style.css
+++ b/module-3/02-CSS-Layouts/student-exercise/style.css
@@ -11,4 +11,28 @@
 html {
     font-size: 16px;
 }
+body{
+    display: grid;
+    grid-template-columns: 1fr 2fr 2fr 2fr 1fr;
+    grid-template-areas:
+    ". header header . ."
+    ". main main main . "
+    ". main main . . "
+    ". main main main ."
+    ". . main . ."
+    ". footer . . .";
+    grid-gap: 20px 50px;
+}
+header {
+    grid-area: header;
+}
+main {
+    grid-area: main;
+}
+footer {
+    grid-area: footer;
+}
+main .headline {
+    
+} 
 
