--- a/module-3/02-CSS-Layouts/student-exercise/style.css
+++ b/module-3/02-CSS-Layouts/student-exercise/style.css
@@ -1,82 +1,91 @@
 :root {
     --blue: #00adee;
     --grey: #505355;
-}
-  
-* {
+    }
+    
+    {
     font-family: Tahoma, Verdana, Segoe, sans-serif;
     box-sizing: border-box;
-}
-
-html {
+    }
+    body {
+    margin: 8%;
+    background-color:rgba(192, 192, 192, 0.1);
+    
+    }
+    html {
     font-size: 16px;
-}
-body {
-    margin: 8%;
-    background-color: rgba (192, 192, 192, 0.1);
-}
-#student-grid {
+    color: #505355;
+    
+    }
+    
+    #student-grid {
     display: grid;
-    grid-template-columns: 8% 1fr 1fr 1fr 8%;
+    grid-template-columns: 2fr 2fr 2fr;
     grid-template-areas:
-    ". headline . . ."
-    ". student-quote student-quote student-picture ."
-    ". student-profile student-profile student-contact ."
-    ". student-profile student-profile . .";
-    grid-gap: 20px 50px;
-}
-headline {
-    grid-area: headline;
-    font-size: 75px;
-    margin: 8%;
-    letter-spacing: 3px;
-}
-student-quote{
-    grid-area: student-quote;
-}
-student-picture {
-    grid-area: student-picture;
-}
-student-profile {
-    grid-area: student-profile;
-}
-student-contact {
-    grid-area: student-contact;
-}
-#student-picture img {
-    border-radius: 50%;
-    width: 100%;
-    grid-area: student-picture;
-}
-#student-quote {
+    "student-qoute student-qoute img"
+    "student-profile student-profile contact"
+    "paragraph paragraph paragraph";
+    grid-gap: 50px;
+    
+    }
+    
+    #student-quote {
+    grid-area: student-qoute;
     font-size: 25px;
-    position: relative;
-    width: 50%;
-    padding-left: 20px;
-    padding-right: 20px;
     padding-top: 8%;
-    padding-bottom: 50px;
     line-height: 1.6;
-}
-#student-profile {
+    }
+    
+    #student-picture img {
+    grid-area: img;
+    border-radius: 50%;
+    width: 100%
+    }
+    
+    #student-profile {
     grid-area: student-profile;
-}
-#student-contact {
-    grid-area: student-contact;
+    }
+    
+    #student-contact p {
+    grid-area: contact;
+    
+    }
+    
+    #experience {
+    grid-area: paragraph;
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: center;
+    }
+    
+    #experience div {
+    
+    flex-basis: 33%;
+    padding-right: 15px;
+    
+    }
+    
+    h3 {
+    color: #00adee;
+    }
+    
+    #student-contact {
+    grid-area: contact;
     text-align: center;
     font-style: italic;
     font-size: 25px;
-}
-#experience div {
-    flex-basis: 33%;
-    padding-right: 15px;
-}
-#experience {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-
-}
-.fas fa-database {
-    display: block;
-}
+    }
+    
+    h1.headline {
+    font-size: 75px;
+    margin: 0px;
+    letter-spacing: 3px;
+    
+    }
+    
+    #te-logo {
+    margin-bottom:20px;
+    height: 30px;
+    top: 0;
+    position: absolute;
+    }
